# os

./: .gitignore  .gitingore  .gitmodules  Makefile  Makefile.md  README  README.md  pass.py  user_shell.rs
doc/: busybox测试.md  fs.md  pic.drawio  信号处理.md  内存&进程优化.md  内存管理.drawio  内存管理.md  定时器.md  测试.md  进程管理.drawio  进程管理.md  验收.md
doc/答辩/: 答辩.md
fat32/: Cargo.toml
fat32-fuse/sd_mnt2/: brk  chdir  clone  execve  fork  open  (+13 more)
final-file/: entry-dynamic.s  entry-static.s  finalshell  libc.s  runtest.s
kernel/: .gdb_history  .gitignore  Cargo.toml  Makefile  fat_img.sh
kernel/.cargo/: config
kernel/src/: config.rs  console.rs  entry.asm  main.rs  sbi.rs  start_app.S  timer.rs
kernel/src/boards/: k210.rs  qemu.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/block/: mod.rs  sdcard.rs  virtio_blk.rs
kernel/src/drivers/chardev/: mod.rs  ns16550a.rs
kernel/src/fs/: dev_fs.rs  fake_file.rs  file_descriptor.rs  fs_info.rs  fs_tree.rs  inode.rs  io_vec.rs  mod.rs  mount.rs  path.rs  pipe.rs  stdio.rs
kernel/src/fs_fat/: file_descriptor.rs  fs_info.rs  inode.rs  mod.rs  mount.rs  path.rs  pipe.rs  stdio.rs
kernel/src/mm/: address.rs  aux.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mmap.rs  mod.rs  page_table.rs
kernel/src/sync/: futex.rs  mod.rs  up.rs
kernel/src/syscall/: fs.rs  mod.rs  net.rs  process.rs  sync.rs  thread.rs  utils.rs
kernel/src/task/: cache.rs  futex.rs  id.rs  info.rs  manager.rs  mod.rs  process.rs  processor.rs  signal.rs  task.rs  timer.rs
kernel/src/trap/: context.rs  lazy.rs  mod.rs  pagefault.rs  trap.S
sdcard_file/: autoshell  busybox_cmd.txt  cat  close  cmdline_args  dup  dup2  exec_test  exit  fantastic_text  filetest_simple  forktest  forktest2  forktest_simple  forktree  fstat  getdents  getppid  gettimeofday  heap_rest  hello_world  ls  matrix  mmap  mount  munmap  pipe  pipe_large_test  pipetest  read  run_pipe_test  sleep_simple  stack_overflow  syscalltest  timertest  umount  usertests  waitpid  write  yield
simple_fat32/: Cargo.toml
(+9 files in other folders)
