[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { path = "../3rd_party/lazy_static", features = ["spin_no_std"] }
buddy_system_allocator = { path = "../3rd_party/buddy_system_allocator" }
bitflags = { path = "../3rd_party/bitflags" }
xmas-elf = "0.7.0"
volatile = { path = "../3rd_party/volatile" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }
simple-fat32 = { path = "../simple_fat32" }
spin = "0.7.1"


[features]
board_qemu = []
board_k210 = []

[profile.release]
debug = true
